added lambda functionality, going to finish AWS set up today and deploy frontend to vercel

--- a/server/package.json
+++ b/server/package.json
@@ -1,24 +1,1 @@
-{
-"name": "habit-battles-server",
-"type": "module",
-"scripts": {
-"dev": "node --watch src/index.js",
-"start": "node src/index.js",
-"test": "NODE_ENV=test jest --runInBand",
-"seed": "node src/seed.js"
-},
-"dependencies": {
-"cors": "^2.8.5",
-"dotenv": "^16.4.5",
-"express": "^4.19.2",
-"mongoose": "^8.4.1",
-"morgan": "^1.10.0",
-"pino": "^9.0.0",
-"pino-http": "^9.0.0"
-},
-"devDependencies": {
-"jest": "^29.7.0",
-"supertest": "^7.0.0",
-"mongodb-memory-server": "^9.0.0"
-}
-}
+{"name":"habit-battles-server","type":"module","scripts":{"dev":"node --watch src/index.js","start":"node src/index.js","test":"NODE_ENV=test jest --runInBand","seed":"node src/seed.js"},"dependencies":{"cors":"^2.8.5","dotenv":"^16.4.5","express":"^4.19.2","mongoose":"^8.4.1","morgan":"^1.10.0","pino":"^9.0.0","pino-http":"^9.0.0","serverless-http":"^4.0.0"},"devDependencies":{"jest":"^29.7.0","mongodb-memory-server":"^9.0.0","supertest":"^7.0.0"}}
